V0.9.9 Added FAQ page and fixed layout issue

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -6,9 +6,7 @@
    
   }
   .welcome-text {
-    text-align: center;
-    font-size: 1.5em;
-    font-weight: bold;
+color: white;
    
   }
 
